--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ethereumjs/tx": "^3.4.0",
     "@hapi/basic": "^6.0.0",
     "@hapi/hapi": "^20.1.5",
     "@hapi/inert": "^6.0.3",
@@ -23,6 +24,7 @@
     "@hapi/vision": "^6.1.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "ethereumjs-tx": "^2.1.2",
     "faker": "^5.5.3",
     "hapi-auth-bearer-token": "^8.0.0",
     "hapi-pino": "^8.3.0",
@@ -31,11 +33,13 @@
     "jsonwebtoken": "^8.5.1",
     "lab-transform-typescript": "^3.0.1",
     "mysql2": "^2.3.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
     "uuid": "^8.3.2",
-    "web3": "^1.6.0"
+    "web3": "^1.5.0",
+    "web3-eth-contract": "^1.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
