--- a/sequelize/config.json
+++ b/sequelize/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
-    "username": "root",
-    "password": "qwe",
-    "database": "database_development",
-    "host": "localhost",
-    "dialect": "mysql"
+    "username": "default",
+    "password": "secret",
+    "database": "blockchain",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
