--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hapi/inert": "^6.0.3",
     "@hapi/nes": "^12.0.4",
     "@hapi/vision": "^6.1.0",
+    "@truffle/hdwallet-provider": "^2.0.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "ethereumjs-tx": "^2.1.2",
@@ -92,5 +93,8 @@
       "eslint --fix"
     ],
     "*.js": "eslint --cache --fix"
+  },
+  "resolutions": {
+    "web3": "1.0.0-beta.37"
   }
 }
